--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <div>
-      <form method="post">
+      <form method="POST">
         <div id="app">
           {{ message }}
         </div>
         <h1>RUTA DE ENTRADA</h1>
         <p>ejemplo : C:/USER..</p>
-        <input type="text" id="into" name="into" />
+        <input type="text" name="into" />
         <button type="submit">ejecutar</button>
       </form>
     </div>
