--- a/index.html
+++ b/index.html
@@ -5,27 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <style>
+      body {
+        background: black;
+        color: greenyellow;
+      }
+    </style>
     <title>Document</title>
   </head>
   <body>
     <div>
-      <form method="POST">
+      <form method="POST" id="form">
         <h1>RUTA DE ENTRADA</h1>
         <p>ejemplo : C:/USER..</p>
-        <input type="text" name="into" />
+        <input type="text" name="into" id="input" />
+        <input type="reset" value="limpiar" id="clear" />
         <button type="submit">ejecutar</button>
       </form>
     </div>
   </body>
-  <script>
-    const app = new Vue({
-      el: "#app",
-      data() {
-        return {
-          title: "",
-        };
-      },
-      methods: {},
-    });
-  </script>
 </html>
